--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "graphql": "^14.1.1",
     "http": "0.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
