--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -w src --config .nodemon.json --exec \"babel-node src\"",
     "build": "npm run cleanup && babel src -D -d dist",
-    "start": "node dist/index.js",
+    "start": "node src/index.js",
     "cleanup": "rm -rf dist"
   },
   "keywords": [
